--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "'Albert Swarm EP'",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
