--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "'Albert Swarm EP'",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
