--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/david-casagrande/albert-swarm-ep-intro",
 
+  
+  "dependencies": {
+    "bower":   "~1.2.8",
+    "express": "~3.4.7",
+    "reload":  "~0.1.0"
+  },
+
   "devDependencies": {
-    "bower":                      "~1.2.8",
-    "express":                    "~3.4.7",
 
     "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
@@ -28,8 +33,7 @@
     "gulp-nodemon":               "~0.1.1",
     "gulp-sass":                  "~0.6.0",
     "gulp-uglify":                "~0.1.0",
-    "path":                       "~0.4.9",
-    "reload":                     "~0.1.0"
+    "path":                       "~0.4.9"
   }
 
 }
