created dist version of application

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
     "gulp-es6-module-transpiler": "~0.1.0",
+    "gulp-imagemin":              "~0.1.4",
     "gulp-jshint":                "git://github.com/wearefractal/gulp-jshint.git",
-    "gulp-nodemon":               "~0.1.2",
+    "gulp-minify-css":            "~0.2.0",
+    "gulp-processhtml":           "~0.0.1",
     "gulp-sass":                  "~0.6.0",
     "gulp-uglify":                "~0.1.0",
     "path":                       "~0.4.9",
