--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "albert-swarm-ep",
   "version": "0.0.0",
-  "description": "'Albert Swarm EP'",
+  "description": "Albert Swarm EP",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp.js dist"
   },
   "repository": {
     "type": "git",
@@ -20,14 +20,15 @@
 
   
   "dependencies": {
-    "bower":   "~1.2.8",
-    "express": "~3.4.7",
-    "reload":  "~0.1.0"
+    "bower":            "~1.2.8",
+    "express":          "~3.4.8",
+    "gulp":             "~3.2.2",
+    "gulp-imagemin":    "~0.1.4",
+    "gulp-minify-css":  "~0.2.0",
+    "gulp-processhtml": "~0.0.1"
   },
 
   "devDependencies": {
-
-    "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
     "gulp-es6-module-transpiler": "~0.1.0",
     "gulp-imagemin":              "~0.1.4",
@@ -37,7 +38,12 @@
     "gulp-sass":                  "~0.6.0",
     "gulp-uglify":                "~0.1.0",
     "path":                       "~0.4.9",
-    "nodemon":                    "~1.0.14"
+    "nodemon":                    "~1.0.14",
+    "reload":                     "~0.1.0"
+  },
+
+  "engines": {
+    "node": "0.10.22"
   }
 
 }
