--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "gulp":             "~3.2.2",
     "gulp-imagemin":    "~0.1.4",
     "gulp-minify-css":  "~0.2.0",
-    "gulp-processhtml": "~0.0.1"
-  },
-
-  "devDependencies": {
+    "gulp-processhtml": "~0.0.1",
     "gulp-concat":                "~2.1.6",
     "gulp-es6-module-transpiler": "~0.1.0",
     "gulp-imagemin":              "~0.1.4",
@@ -37,7 +34,11 @@
     "gulp-processhtml":           "~0.0.1",
     "gulp-sass":                  "~0.6.0",
     "gulp-uglify":                "~0.1.0",
-    "path":                       "~0.4.9",
+    "path":                       "~0.4.9"
+  },
+
+  "devDependencies": {
+
     "nodemon":                    "~1.0.14",
     "reload":                     "~0.1.0"
   },
