--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/gulp/bin/gulp.js dist"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,12 @@
 
   
   "dependencies": {
-    "bower":            "~1.2.8",
-    "express":          "~3.4.8",
-    "gulp":             "~3.2.2",
-    "gulp-imagemin":    "~0.1.4",
-    "gulp-minify-css":  "~0.2.0",
-    "gulp-processhtml": "~0.0.1",
+    "bower":   "~1.2.8",
+    "express": "~3.4.8"
+  },
+
+  "devDependencies": {
+    "gulp":                       "~3.2.2",
     "gulp-concat":                "~2.1.6",
     "gulp-es6-module-transpiler": "~0.1.0",
     "gulp-imagemin":              "~0.1.4",
@@ -34,17 +34,13 @@
     "gulp-processhtml":           "~0.0.1",
     "gulp-sass":                  "~0.6.0",
     "gulp-uglify":                "~0.1.0",
-    "path":                       "~0.4.9"
-  },
-
-  "devDependencies": {
-
+    "path":                       "~0.4.9",
     "nodemon":                    "~1.0.14",
     "reload":                     "~0.1.0"
   },
 
   "engines": {
-    "node": "0.10.22"
+    "node": ">=0.10.22"
   }
 
 }
